--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "caniuse-lite": "^1.0.30001614",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-gallery": "^1.0.1",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
